# chacha20

./: .clang-format  CMakeLists.txt
src/: chacha20.cpp  chacha20.h  operations.h
tests/: chacha20_test.cpp
